# msu_tbs_simple

./: .gitignore  Process_ERA5_AtmWts_method_1.TLT.py  ReadMe.md  era5_monthly.py  pyproject.toml
data/wt_tables/: std_atmosphere_wt_function_msu_chan_TLS_land_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TLS_ocean_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TLT_land_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TLT_ocean_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TMT_land_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TMT_ocean_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TTS_land_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_msu_chan_TTS_ocean_by_surface_pressure.1100.V4.nc  where_these_are made.txt
example_era5_data/2D/2000/: era5_PS_2D_144_73_2000_01.nc  era5_SeaIce_2D_144_73_2000_01.nc  era5_T2m_2D_144_73_2000_01.nc
example_era5_data/2D/2024/: era5_PS_2D_360_181_2024_01.nc  era5_T2m_2D_360_181_2024_01.nc  era5_TSkin_2D_360_181_2024_01.nc
example_era5_data/3D/2024/: era5_T_3D_360_181_2024_01.nc
examples/: Process_ERA5_AtmWts_simple_TLT.py  Process_ERA5_AtmWts_simple_all_channels.py  era5.py
examples/output/: ERA5_TLS_Tbs_2024_01.test.nc  ERA5_TLT_Tbs_2024_01.test.nc  ERA5_TMT_Tbs_2024_01.test.nc  ERA5_TTS_Tbs_2024_01.test.nc
src/msu_tbs_simple/: AtmWts_method_1.py  __init__.py  msu_tbs_simple.py
src/msu_tbs_simple.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+7 files in other folders)
